--- a/Excel_Form/package.json
+++ b/Excel_Form/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "build": "cd client && npm run build",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
