--- a/Excel_Form/package.json
+++ b/Excel_Form/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "cd client && npm run build",
+    "build": "npm i",
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
