--- a/Excel_Form/package.json
+++ b/Excel_Form/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm i",
+    "build": "npm i && npm i --prefix client && cd client && npm run build",
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
     "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.2",
     "nodemailer-smtp-transport": "^2.7.4"
   }
