--- a/Excel_Form/package.json
+++ b/Excel_Form/package.json
@@ -20,6 +20,7 @@
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.2",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "nodemailer-smtp-transport": "^2.7.4",
+    "uuid": "^9.0.0"
   }
 }
